@@ -1,16 +1,14 @@
 package com.jetbrains.youtrack.db.internal.core.index;
 
 import com.jetbrains.youtrack.db.api.exception.BaseException;
-import com.jetbrains.youtrack.db.api.exception.DatabaseException;
-import com.jetbrains.youtrack.db.api.schema.PropertyType;
 import com.jetbrains.youtrack.db.internal.DbTestBase;
-import com.jetbrains.youtrack.db.internal.core.db.record.MultiValueChangeEvent;
-import com.jetbrains.youtrack.db.internal.core.db.record.TrackedList;
-import com.jetbrains.youtrack.db.internal.core.db.record.TrackedMap;
-import com.jetbrains.youtrack.db.internal.core.db.record.TrackedSet;
+import com.jetbrains.youtrack.db.internal.core.db.record.EntityEmbeddedListImpl;
+import com.jetbrains.youtrack.db.internal.core.db.record.EntityEmbeddedSetImpl;
+import com.jetbrains.youtrack.db.internal.core.db.record.EntityEmbeddedMapImpl;
 import com.jetbrains.youtrack.db.internal.core.db.record.ridbag.RidBag;
 import com.jetbrains.youtrack.db.internal.core.id.RecordId;
-import com.jetbrains.youtrack.db.internal.core.record.RecordInternal;
+import com.jetbrains.youtrack.db.internal.core.metadata.schema.PropertyTypeInternal;
+import com.jetbrains.youtrack.db.internal.core.record.RecordAbstract;
 import com.jetbrains.youtrack.db.internal.core.record.impl.EntityImpl;
 import it.unimi.dsi.fastutil.objects.Object2IntOpenHashMap;
 import java.util.ArrayList;
@@ -20,6 +18,7 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import org.junit.After;
 import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
@@ -31,15 +30,23 @@ public class CompositeIndexDefinitionTest extends DbTestBase {
 
   @Before
   public void beforeMethod() {
+    session.begin();
     compositeIndex = new CompositeIndexDefinition("testClass");
 
-    compositeIndex.addIndex(new PropertyIndexDefinition("testClass", "fOne", PropertyType.INTEGER));
-    compositeIndex.addIndex(new PropertyIndexDefinition("testClass", "fTwo", PropertyType.STRING));
+    compositeIndex.addIndex(
+        new PropertyIndexDefinition("testClass", "fOne", PropertyTypeInternal.INTEGER));
+    compositeIndex.addIndex(
+        new PropertyIndexDefinition("testClass", "fTwo", PropertyTypeInternal.STRING));
+  }
+
+  @After
+  public void afterMethod() {
+    session.rollback();
   }
 
   @Test
   public void testGetFields() {
-    final List<String> fields = compositeIndex.getFields();
+    final var fields = compositeIndex.getFields();
 
     Assert.assertEquals(2, fields.size());
     Assert.assertEquals("fOne", fields.get(0));
@@ -48,49 +55,56 @@ public class CompositeIndexDefinitionTest extends DbTestBase {
 
   @Test
   public void testCreateValueSuccessful() {
-    final Object result = compositeIndex.createValue(db, Arrays.asList("12", "test"));
+    final var result = compositeIndex.createValue(session.getActiveTransaction(),
+        Arrays.asList("12", "test"));
 
     Assert.assertEquals(result, new CompositeKey(Arrays.asList(12, "test")));
   }
 
   @Test
   public void testCreateMapValueSuccessful() {
-    final CompositeIndexDefinition compositeIndexDefinition =
+    final var compositeIndexDefinition =
         new CompositeIndexDefinition("testCollectionClass");
 
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyType.INTEGER));
+        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyTypeInternal.INTEGER));
     compositeIndexDefinition.addIndex(
         new PropertyMapIndexDefinition(
-            "testCollectionClass", "fTwo", PropertyType.STRING,
+            "testCollectionClass", "fTwo", PropertyTypeInternal.STRING,
             PropertyMapIndexDefinition.INDEX_BY.KEY));
 
     final Map<String, String> stringMap = new HashMap<String, String>();
     stringMap.put("key1", "val1");
     stringMap.put("key2", "val2");
 
-    final Object result = compositeIndexDefinition.createValue(db, 12, stringMap);
+    session.begin();
+    final var result = compositeIndexDefinition.createValue(session.getActiveTransaction(), 12,
+        stringMap);
 
-    final Collection<CompositeKey> collectionResult = (Collection<CompositeKey>) result;
+    final var collectionResult = (Collection<CompositeKey>) result;
 
     Assert.assertEquals(2, collectionResult.size());
     Assert.assertTrue(collectionResult.contains(new CompositeKey(12, "key1")));
     Assert.assertTrue(collectionResult.contains(new CompositeKey(12, "key2")));
+    session.commit();
   }
+
 
   @Test
   public void testCreateCollectionValueSuccessfulOne() {
-    final CompositeIndexDefinition compositeIndexDefinition =
+    final var compositeIndexDefinition =
         new CompositeIndexDefinition("testCollectionClass");
 
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyType.INTEGER));
+        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyTypeInternal.INTEGER));
     compositeIndexDefinition.addIndex(
-        new PropertyListIndexDefinition("testCollectionClass", "fTwo", PropertyType.INTEGER));
+        new PropertyListIndexDefinition("testCollectionClass", "fTwo",
+            PropertyTypeInternal.INTEGER));
 
-    final Object result = compositeIndexDefinition.createValue(db, 12, Arrays.asList(1, 2));
+    final var result = compositeIndexDefinition.createValue(session.getActiveTransaction(), 12,
+        Arrays.asList(1, 2));
 
-    final ArrayList<CompositeKey> expectedResult = new ArrayList<CompositeKey>();
+    final var expectedResult = new ArrayList<CompositeKey>();
 
     expectedResult.add(new CompositeKey(12, 1));
     expectedResult.add(new CompositeKey(12, 2));
@@ -100,22 +114,23 @@ public class CompositeIndexDefinitionTest extends DbTestBase {
 
   @Test
   public void testCreateRidBagValueSuccessfulOne() {
-    final CompositeIndexDefinition compositeIndexDefinition =
+    final var compositeIndexDefinition =
         new CompositeIndexDefinition("testCollectionClass");
 
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyType.INTEGER));
+        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyTypeInternal.INTEGER));
     compositeIndexDefinition.addIndex(
         new PropertyRidBagIndexDefinition("testCollectionClass", "fTwo"));
 
-    RidBag ridBag = new RidBag(db);
+    var ridBag = new RidBag(session);
     ridBag.add(new RecordId("#1:10"));
     ridBag.add(new RecordId("#1:11"));
     ridBag.add(new RecordId("#1:11"));
 
-    final Object result = compositeIndexDefinition.createValue(db, 12, ridBag);
+    final var result = compositeIndexDefinition.createValue(session.getActiveTransaction(), 12,
+        ridBag);
 
-    final ArrayList<CompositeKey> expectedResult = new ArrayList<CompositeKey>();
+    final var expectedResult = new ArrayList<CompositeKey>();
 
     expectedResult.add(new CompositeKey(12, new RecordId("#1:10")));
     expectedResult.add(new CompositeKey(12, new RecordId("#1:11")));
@@ -126,18 +141,20 @@ public class CompositeIndexDefinitionTest extends DbTestBase {
 
   @Test
   public void testCreateCollectionValueSuccessfulTwo() {
-    final CompositeIndexDefinition compositeIndexDefinition =
+    final var compositeIndexDefinition =
         new CompositeIndexDefinition("testCollectionClass");
 
     compositeIndexDefinition.addIndex(
-        new PropertyListIndexDefinition("testCollectionClass", "fTwo", PropertyType.INTEGER));
+        new PropertyListIndexDefinition("testCollectionClass", "fTwo",
+            PropertyTypeInternal.INTEGER));
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyType.INTEGER));
+        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyTypeInternal.INTEGER));
 
-    final Object result =
-        compositeIndexDefinition.createValue(db, Arrays.asList(Arrays.asList(1, 2), 12));
+    final var result =
+        compositeIndexDefinition.createValue(session.getActiveTransaction(),
+            Arrays.asList(Arrays.asList(1, 2), 12));
 
-    final ArrayList<CompositeKey> expectedResult = new ArrayList<CompositeKey>();
+    final var expectedResult = new ArrayList<CompositeKey>();
 
     expectedResult.add(new CompositeKey(1, 12));
     expectedResult.add(new CompositeKey(2, 12));
@@ -147,80 +164,89 @@ public class CompositeIndexDefinitionTest extends DbTestBase {
 
   @Test
   public void testCreateCollectionValueEmptyListOne() {
-    final CompositeIndexDefinition compositeIndexDefinition =
+    final var compositeIndexDefinition =
         new CompositeIndexDefinition("testCollectionClass");
 
     compositeIndexDefinition.addIndex(
-        new PropertyListIndexDefinition("testCollectionClass", "fTwo", PropertyType.INTEGER));
+        new PropertyListIndexDefinition("testCollectionClass", "fTwo",
+            PropertyTypeInternal.INTEGER));
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyType.INTEGER));
+        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyTypeInternal.INTEGER));
 
-    final Object result = compositeIndexDefinition.createValue(db, Collections.emptyList(), 12);
+    final var result = compositeIndexDefinition.createValue(session.getActiveTransaction(),
+        Collections.emptyList(), 12);
     Assert.assertNull(result);
   }
 
   @Test
   public void testCreateCollectionValueEmptyListTwo() {
-    final CompositeIndexDefinition compositeIndexDefinition =
+    final var compositeIndexDefinition =
         new CompositeIndexDefinition("testCollectionClass");
 
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyType.INTEGER));
+        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyTypeInternal.INTEGER));
     compositeIndexDefinition.addIndex(
-        new PropertyListIndexDefinition("testCollectionClass", "fTwo", PropertyType.INTEGER));
+        new PropertyListIndexDefinition("testCollectionClass", "fTwo",
+            PropertyTypeInternal.INTEGER));
 
-    final Object result = compositeIndexDefinition.createValue(db, 12, Collections.emptyList());
+    final var result = compositeIndexDefinition.createValue(session.getActiveTransaction(), 12,
+        Collections.emptyList());
     Assert.assertNull(result);
   }
 
   @Test
   public void testCreateCollectionValueEmptyListOneNullSupport() {
-    final CompositeIndexDefinition compositeIndexDefinition =
+    final var compositeIndexDefinition =
         new CompositeIndexDefinition("testCollectionClass");
     compositeIndexDefinition.setNullValuesIgnored(false);
 
     compositeIndexDefinition.addIndex(
-        new PropertyListIndexDefinition("testCollectionClass", "fTwo", PropertyType.INTEGER));
+        new PropertyListIndexDefinition("testCollectionClass", "fTwo",
+            PropertyTypeInternal.INTEGER));
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyType.INTEGER));
+        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyTypeInternal.INTEGER));
 
-    final Object result = compositeIndexDefinition.createValue(db, Collections.emptyList(), 12);
+    final var result = compositeIndexDefinition.createValue(session.getActiveTransaction(),
+        Collections.emptyList(), 12);
     Assert.assertEquals(result, List.of(new CompositeKey(null, 12)));
   }
 
   @Test
   public void testCreateCollectionValueEmptyListTwoNullSupport() {
-    final CompositeIndexDefinition compositeIndexDefinition =
+    final var compositeIndexDefinition =
         new CompositeIndexDefinition("testCollectionClass");
     compositeIndexDefinition.setNullValuesIgnored(false);
 
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyType.INTEGER));
+        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyTypeInternal.INTEGER));
     compositeIndexDefinition.addIndex(
-        new PropertyListIndexDefinition("testCollectionClass", "fTwo", PropertyType.INTEGER));
+        new PropertyListIndexDefinition("testCollectionClass", "fTwo",
+            PropertyTypeInternal.INTEGER));
 
-    final Object result = compositeIndexDefinition.createValue(db, 12, Collections.emptyList());
+    final var result = compositeIndexDefinition.createValue(session.getActiveTransaction(), 12,
+        Collections.emptyList());
     Assert.assertEquals(result, List.of(new CompositeKey(12, null)));
   }
 
   @Test
   public void testCreateRidBagValueSuccessfulTwo() {
-    final CompositeIndexDefinition compositeIndexDefinition =
+    final var compositeIndexDefinition =
         new CompositeIndexDefinition("testCollectionClass");
 
     compositeIndexDefinition.addIndex(
         new PropertyRidBagIndexDefinition("testCollectionClass", "fTwo"));
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyType.INTEGER));
+        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyTypeInternal.INTEGER));
 
-    RidBag ridBag = new RidBag(db);
+    var ridBag = new RidBag(session);
     ridBag.add(new RecordId("#1:10"));
     ridBag.add(new RecordId("#1:11"));
     ridBag.add(new RecordId("#1:11"));
 
-    final Object result = compositeIndexDefinition.createValue(db, Arrays.asList(ridBag, 12));
+    final var result = compositeIndexDefinition.createValue(session.getActiveTransaction(),
+        Arrays.asList(ridBag, 12));
 
-    final ArrayList<CompositeKey> expectedResult = new ArrayList<CompositeKey>();
+    final var expectedResult = new ArrayList<CompositeKey>();
 
     expectedResult.add(new CompositeKey(new RecordId("#1:10"), 12));
     expectedResult.add(new CompositeKey(new RecordId("#1:11"), 12));
@@ -231,19 +257,22 @@ public class CompositeIndexDefinitionTest extends DbTestBase {
 
   @Test
   public void testCreateCollectionValueSuccessfulThree() {
-    final CompositeIndexDefinition compositeIndexDefinition =
+    final var compositeIndexDefinition =
         new CompositeIndexDefinition("testCollectionClass");
 
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyType.INTEGER));
+        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyTypeInternal.INTEGER));
     compositeIndexDefinition.addIndex(
-        new PropertyListIndexDefinition("testCollectionClass", "fTwo", PropertyType.INTEGER));
+        new PropertyListIndexDefinition("testCollectionClass", "fTwo",
+            PropertyTypeInternal.INTEGER));
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fThree", PropertyType.STRING));
+        new PropertyIndexDefinition("testCollectionClass", "fThree", PropertyTypeInternal.STRING));
 
-    final Object result = compositeIndexDefinition.createValue(db, 12, Arrays.asList(1, 2), "test");
+    final var result = compositeIndexDefinition.createValue(session.getActiveTransaction(), 12,
+        Arrays.asList(1, 2),
+        "test");
 
-    final ArrayList<CompositeKey> expectedResult = new ArrayList<CompositeKey>();
+    final var expectedResult = new ArrayList<CompositeKey>();
 
     expectedResult.add(new CompositeKey(12, 1, "test"));
     expectedResult.add(new CompositeKey(12, 2, "test"));
@@ -253,24 +282,25 @@ public class CompositeIndexDefinitionTest extends DbTestBase {
 
   @Test
   public void testCreateRidBagValueSuccessfulThree() {
-    final CompositeIndexDefinition compositeIndexDefinition =
+    final var compositeIndexDefinition =
         new CompositeIndexDefinition("testCollectionClass");
 
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyType.INTEGER));
+        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyTypeInternal.INTEGER));
     compositeIndexDefinition.addIndex(
         new PropertyRidBagIndexDefinition("testCollectionClass", "fTwo"));
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fThree", PropertyType.STRING));
+        new PropertyIndexDefinition("testCollectionClass", "fThree", PropertyTypeInternal.STRING));
 
-    RidBag ridBag = new RidBag(db);
+    var ridBag = new RidBag(session);
     ridBag.add(new RecordId("#1:10"));
     ridBag.add(new RecordId("#1:11"));
     ridBag.add(new RecordId("#1:11"));
 
-    final Object result = compositeIndexDefinition.createValue(db, 12, ridBag, "test");
+    final var result = compositeIndexDefinition.createValue(session.getActiveTransaction(), 12,
+        ridBag, "test");
 
-    final ArrayList<CompositeKey> expectedResult = new ArrayList<CompositeKey>();
+    final var expectedResult = new ArrayList<CompositeKey>();
 
     expectedResult.add(new CompositeKey(12, new RecordId("#1:10"), "test"));
     expectedResult.add(new CompositeKey(12, new RecordId("#1:11"), "test"));
@@ -281,423 +311,471 @@ public class CompositeIndexDefinitionTest extends DbTestBase {
 
   @Test(expected = IndexException.class)
   public void testCreateCollectionValueTwoCollections() {
-    final CompositeIndexDefinition compositeIndexDefinition =
+    final var compositeIndexDefinition =
         new CompositeIndexDefinition("testCollectionClass");
 
     compositeIndexDefinition.addIndex(
-        new PropertyListIndexDefinition("testCollectionClass", "fTwo", PropertyType.INTEGER));
+        new PropertyListIndexDefinition("testCollectionClass", "fTwo",
+            PropertyTypeInternal.INTEGER));
     compositeIndexDefinition.addIndex(
-        new PropertyListIndexDefinition("testCollectionClass", "fOne", PropertyType.INTEGER));
+        new PropertyListIndexDefinition("testCollectionClass", "fOne",
+            PropertyTypeInternal.INTEGER));
 
-    compositeIndexDefinition.createValue(db, Arrays.asList(1, 2), List.of(12));
+    compositeIndexDefinition.createValue(session.getActiveTransaction(), Arrays.asList(1, 2),
+        List.of(12));
   }
 
-  @Test(expected = DatabaseException.class)
+  @Test(expected = NumberFormatException.class)
   public void testCreateValueWrongParam() {
-    compositeIndex.createValue(db, Arrays.asList("1t2", "test"));
+    compositeIndex.createValue(session.getActiveTransaction(), Arrays.asList("1t2", "test"));
   }
 
   @Test
   public void testCreateValueSuccessfulArrayParams() {
-    final Object result = compositeIndex.createValue(db, "12", "test");
+    final var result = compositeIndex.createValue(session.getActiveTransaction(), "12", "test");
 
     Assert.assertEquals(result, new CompositeKey(Arrays.asList(12, "test")));
   }
 
-  @Test(expected = DatabaseException.class)
+  @Test(expected = NumberFormatException.class)
   public void testCreateValueWrongParamArrayParams() {
-    compositeIndex.createValue(db, "1t2", "test");
+    compositeIndex.createValue(session.getActiveTransaction(), "1t2", "test");
   }
 
   @Test
   public void testCreateValueDefinitionsMoreThanParams() {
     compositeIndex.addIndex(
-        new PropertyIndexDefinition("testClass", "fThree", PropertyType.STRING));
+        new PropertyIndexDefinition("testClass", "fThree", PropertyTypeInternal.STRING));
 
-    final Object result = compositeIndex.createValue(db, "12", "test");
+    final var result = compositeIndex.createValue(session.getActiveTransaction(), "12", "test");
     Assert.assertEquals(result, new CompositeKey(Arrays.asList(12, "test")));
   }
 
   @Test
   public void testCreateValueIndexItemWithTwoParams() {
-    final CompositeIndexDefinition anotherCompositeIndex =
+    final var anotherCompositeIndex =
         new CompositeIndexDefinition("testClass");
 
     anotherCompositeIndex.addIndex(
-        new PropertyIndexDefinition("testClass", "f11", PropertyType.STRING));
+        new PropertyIndexDefinition("testClass", "f11", PropertyTypeInternal.STRING));
     anotherCompositeIndex.addIndex(
-        new PropertyIndexDefinition("testClass", "f22", PropertyType.STRING));
+        new PropertyIndexDefinition("testClass", "f22", PropertyTypeInternal.STRING));
 
     compositeIndex.addIndex(anotherCompositeIndex);
 
-    final Object result = compositeIndex.createValue(db, "12", "test", "tset");
+    final var result = compositeIndex.createValue(session.getActiveTransaction(), "12", "test",
+        "tset");
     Assert.assertEquals(result, new CompositeKey(Arrays.asList(12, "test", "tset")));
   }
 
   @Test
   public void testDocumentToIndexSuccessful() {
-    final EntityImpl document = new EntityImpl();
+    session.begin();
+    final var document = (EntityImpl) session.newEntity();
 
-    document.field("fOne", 12);
-    document.field("fTwo", "test");
+    document.setProperty("fOne", 12);
+    document.setProperty("fTwo", "test");
 
-    final Object result = compositeIndex.getDocumentValueToIndex(db, document);
+    final var result = compositeIndex.getDocumentValueToIndex(session.getActiveTransaction(),
+        document);
     Assert.assertEquals(result, new CompositeKey(Arrays.asList(12, "test")));
+    session.rollback();
   }
 
   @Test
   public void testDocumentToIndexMapValueSuccessful() {
-    final EntityImpl document = new EntityImpl();
+    session.begin();
+    final var document = (EntityImpl) session.newEntity();
 
-    final Map<String, String> stringMap = new HashMap<String, String>();
+    final Map<String, String> stringMap = session.newEmbeddedMap();
     stringMap.put("key1", "val1");
     stringMap.put("key2", "val2");
 
-    document.field("fOne", 12);
-    document.field("fTwo", stringMap);
+    document.setInt("fOne", 12);
+    document.setProperty("fTwo", stringMap);
 
-    final CompositeIndexDefinition compositeIndexDefinition =
+    final var compositeIndexDefinition =
         new CompositeIndexDefinition("testCollectionClass");
 
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyType.INTEGER));
+        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyTypeInternal.INTEGER));
     compositeIndexDefinition.addIndex(
         new PropertyMapIndexDefinition(
-            "testCollectionClass", "fTwo", PropertyType.STRING,
+            "testCollectionClass", "fTwo", PropertyTypeInternal.STRING,
             PropertyMapIndexDefinition.INDEX_BY.KEY));
 
-    final Object result = compositeIndexDefinition.getDocumentValueToIndex(db, document);
-    final Collection<CompositeKey> collectionResult = (Collection<CompositeKey>) result;
+    final var result = compositeIndexDefinition.getDocumentValueToIndex(
+        session.getActiveTransaction(), document);
+    final var collectionResult = (Collection<CompositeKey>) result;
 
     Assert.assertEquals(2, collectionResult.size());
     Assert.assertTrue(collectionResult.contains(new CompositeKey(12, "key1")));
     Assert.assertTrue(collectionResult.contains(new CompositeKey(12, "key2")));
+    session.rollback();
   }
 
   @Test
   public void testDocumentToIndexCollectionValueSuccessfulOne() {
-    final EntityImpl document = new EntityImpl();
+    session.begin();
+    final var document = (EntityImpl) session.newEntity();
 
-    document.field("fOne", 12);
-    document.field("fTwo", Arrays.asList(1, 2));
+    document.setInt("fOne", 12);
+    document.newEmbeddedList("fTwo").addAll(Arrays.asList(1, 2));
 
-    final CompositeIndexDefinition compositeIndexDefinition =
+    final var compositeIndexDefinition =
         new CompositeIndexDefinition("testCollectionClass");
 
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyType.INTEGER));
+        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyTypeInternal.INTEGER));
     compositeIndexDefinition.addIndex(
-        new PropertyListIndexDefinition("testCollectionClass", "fTwo", PropertyType.INTEGER));
+        new PropertyListIndexDefinition("testCollectionClass", "fTwo",
+            PropertyTypeInternal.INTEGER));
 
-    final Object result = compositeIndexDefinition.getDocumentValueToIndex(db, document);
+    final var result = compositeIndexDefinition.getDocumentValueToIndex(
+        session.getActiveTransaction(), document);
 
-    final ArrayList<CompositeKey> expectedResult = new ArrayList<CompositeKey>();
+    final var expectedResult = new ArrayList<CompositeKey>();
 
     expectedResult.add(new CompositeKey(12, 1));
     expectedResult.add(new CompositeKey(12, 2));
 
     Assert.assertEquals(result, expectedResult);
+    session.rollback();
   }
 
   @Test
   public void testDocumentToIndexCollectionValueEmptyOne() {
-    final EntityImpl document = new EntityImpl();
+    session.begin();
+    final var document = (EntityImpl) session.newEntity();
 
-    document.field("fOne", 12);
-    document.field("fTwo", Collections.emptyList());
+    document.setProperty("fOne", 12);
+    document.newEmbeddedList("fTwo");
 
-    final CompositeIndexDefinition compositeIndexDefinition =
+    final var compositeIndexDefinition =
         new CompositeIndexDefinition("testCollectionClass");
 
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyType.INTEGER));
+        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyTypeInternal.INTEGER));
     compositeIndexDefinition.addIndex(
-        new PropertyListIndexDefinition("testCollectionClass", "fTwo", PropertyType.INTEGER));
+        new PropertyListIndexDefinition("testCollectionClass", "fTwo",
+            PropertyTypeInternal.INTEGER));
 
-    final Object result = compositeIndexDefinition.getDocumentValueToIndex(db, document);
+    final var result = compositeIndexDefinition.getDocumentValueToIndex(
+        session.getActiveTransaction(), document);
     Assert.assertNull(result);
+    session.rollback();
   }
 
   @Test
   public void testDocumentToIndexCollectionValueEmptyTwo() {
-    final EntityImpl document = new EntityImpl();
+    session.begin();
+    final var document = (EntityImpl) session.newEntity();
 
-    document.field("fOne", Collections.emptyList());
-    document.field("fTwo", 12);
+    document.newEmbeddedList("fOne");
+    document.setProperty("fTwo", 12);
 
-    final CompositeIndexDefinition compositeIndexDefinition =
+    final var compositeIndexDefinition =
         new CompositeIndexDefinition("testCollectionClass");
 
     compositeIndexDefinition.addIndex(
-        new PropertyListIndexDefinition("testCollectionClass", "fOne", PropertyType.INTEGER));
+        new PropertyListIndexDefinition("testCollectionClass", "fOne",
+            PropertyTypeInternal.INTEGER));
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fTwo", PropertyType.INTEGER));
+        new PropertyIndexDefinition("testCollectionClass", "fTwo", PropertyTypeInternal.INTEGER));
 
-    final Object result = compositeIndexDefinition.getDocumentValueToIndex(db, document);
+    final var result = compositeIndexDefinition.getDocumentValueToIndex(
+        session.getActiveTransaction(), document);
     Assert.assertNull(result);
+    session.rollback();
   }
 
   @Test
   public void testDocumentToIndexCollectionValueEmptyOneNullValuesSupport() {
-    final EntityImpl document = new EntityImpl();
+    session.begin();
+    final var document = (EntityImpl) session.newEntity();
 
-    document.field("fOne", 12);
-    document.field("fTwo", Collections.emptyList());
+    document.setProperty("fOne", 12);
+    document.newEmbeddedList("fTwo");
 
-    final CompositeIndexDefinition compositeIndexDefinition =
+    final var compositeIndexDefinition =
         new CompositeIndexDefinition("testCollectionClass");
 
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyType.INTEGER));
+        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyTypeInternal.INTEGER));
     compositeIndexDefinition.addIndex(
-        new PropertyListIndexDefinition("testCollectionClass", "fTwo", PropertyType.INTEGER));
+        new PropertyListIndexDefinition("testCollectionClass", "fTwo",
+            PropertyTypeInternal.INTEGER));
     compositeIndexDefinition.setNullValuesIgnored(false);
 
-    final Object result = compositeIndexDefinition.getDocumentValueToIndex(db, document);
+    final var result = compositeIndexDefinition.getDocumentValueToIndex(
+        session.getActiveTransaction(), document);
     Assert.assertEquals(result, List.of(new CompositeKey(12, null)));
+    session.rollback();
   }
 
   @Test
   public void testDocumentToIndexCollectionValueEmptyTwoNullValuesSupport() {
-    final EntityImpl document = new EntityImpl();
+    session.begin();
+    final var document = (EntityImpl) session.newEntity();
 
-    document.field("fOne", Collections.emptyList());
-    document.field("fTwo", 12);
+    document.newEmbeddedList("fOne");
+    document.setProperty("fTwo", 12);
 
-    final CompositeIndexDefinition compositeIndexDefinition =
+    final var compositeIndexDefinition =
         new CompositeIndexDefinition("testCollectionClass");
 
     compositeIndexDefinition.addIndex(
-        new PropertyListIndexDefinition("testCollectionClass", "fOne", PropertyType.INTEGER));
+        new PropertyListIndexDefinition("testCollectionClass", "fOne",
+            PropertyTypeInternal.INTEGER));
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fTwo", PropertyType.INTEGER));
+        new PropertyIndexDefinition("testCollectionClass", "fTwo", PropertyTypeInternal.INTEGER));
     compositeIndexDefinition.setNullValuesIgnored(false);
 
-    final Object result = compositeIndexDefinition.getDocumentValueToIndex(db, document);
+    final var result = compositeIndexDefinition.getDocumentValueToIndex(
+        session.getActiveTransaction(), document);
     Assert.assertEquals(result, List.of(new CompositeKey(null, 12)));
+    session.rollback();
   }
 
   @Test
   public void testDocumentToIndexRidBagValueSuccessfulOne() {
-    final EntityImpl document = new EntityImpl();
+    session.begin();
+    final var document = (EntityImpl) session.newEntity();
 
-    final RidBag ridBag = new RidBag(db);
+    final var ridBag = new RidBag(session);
     ridBag.add(new RecordId("#1:10"));
     ridBag.add(new RecordId("#1:11"));
     ridBag.add(new RecordId("#1:11"));
 
-    document.field("fOne", 12);
-    document.field("fTwo", ridBag);
+    document.setProperty("fOne", 12);
+    document.setProperty("fTwo", ridBag);
 
-    final CompositeIndexDefinition compositeIndexDefinition =
+    final var compositeIndexDefinition =
         new CompositeIndexDefinition("testCollectionClass");
 
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyType.INTEGER));
+        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyTypeInternal.INTEGER));
     compositeIndexDefinition.addIndex(
         new PropertyRidBagIndexDefinition("testCollectionClass", "fTwo"));
 
-    final Object result = compositeIndexDefinition.getDocumentValueToIndex(db, document);
+    final var result = compositeIndexDefinition.getDocumentValueToIndex(
+        session.getActiveTransaction(), document);
 
-    final ArrayList<CompositeKey> expectedResult = new ArrayList<CompositeKey>();
+    final var expectedResult = new ArrayList<CompositeKey>();
 
     expectedResult.add(new CompositeKey(12, new RecordId("#1:10")));
     expectedResult.add(new CompositeKey(12, new RecordId("#1:11")));
     expectedResult.add(new CompositeKey(12, new RecordId("#1:11")));
 
     Assert.assertEquals(result, expectedResult);
+    session.rollback();
   }
 
   @Test
   public void testDocumentToIndexCollectionValueSuccessfulTwo() {
-    final EntityImpl document = new EntityImpl();
+    session.begin();
+    final var document = (EntityImpl) session.newEntity();
 
-    document.field("fOne", 12);
-    document.field("fTwo", Arrays.asList(1, 2));
+    document.setProperty("fOne", 12);
+    document.newEmbeddedList("fTwo").addAll(Arrays.asList(1, 2));
 
-    final CompositeIndexDefinition compositeIndexDefinition =
+    final var compositeIndexDefinition =
         new CompositeIndexDefinition("testCollectionClass");
 
     compositeIndexDefinition.addIndex(
-        new PropertyListIndexDefinition("testCollectionClass", "fTwo", PropertyType.INTEGER));
+        new PropertyListIndexDefinition("testCollectionClass", "fTwo",
+            PropertyTypeInternal.INTEGER));
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyType.INTEGER));
+        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyTypeInternal.INTEGER));
 
-    final Object result = compositeIndexDefinition.getDocumentValueToIndex(db, document);
+    final var result = compositeIndexDefinition.getDocumentValueToIndex(
+        session.getActiveTransaction(), document);
 
-    final ArrayList<CompositeKey> expectedResult = new ArrayList<CompositeKey>();
+    final var expectedResult = new ArrayList<CompositeKey>();
 
     expectedResult.add(new CompositeKey(1, 12));
     expectedResult.add(new CompositeKey(2, 12));
 
     Assert.assertEquals(result, expectedResult);
+    session.rollback();
   }
 
   @Test
   public void testDocumentToIndexRidBagValueSuccessfulTwo() {
-    final RidBag ridBag = new RidBag(db);
+    session.begin();
+    final var ridBag = new RidBag(session);
     ridBag.add(new RecordId("#1:10"));
     ridBag.add(new RecordId("#1:11"));
     ridBag.add(new RecordId("#1:11"));
 
-    final EntityImpl document = new EntityImpl();
+    final var document = (EntityImpl) session.newEntity();
 
-    document.field("fOne", 12);
-    document.field("fTwo", ridBag);
+    document.setProperty("fOne", 12);
+    document.setProperty("fTwo", ridBag);
 
-    final CompositeIndexDefinition compositeIndexDefinition =
+    final var compositeIndexDefinition =
         new CompositeIndexDefinition("testCollectionClass");
 
     compositeIndexDefinition.addIndex(
         new PropertyRidBagIndexDefinition("testCollectionClass", "fTwo"));
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyType.INTEGER));
+        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyTypeInternal.INTEGER));
 
-    final Object result = compositeIndexDefinition.getDocumentValueToIndex(db, document);
+    final var result = compositeIndexDefinition.getDocumentValueToIndex(
+        session.getActiveTransaction(), document);
 
-    final ArrayList<CompositeKey> expectedResult = new ArrayList<CompositeKey>();
+    final var expectedResult = new ArrayList<CompositeKey>();
 
     expectedResult.add(new CompositeKey(new RecordId("#1:10"), 12));
     expectedResult.add(new CompositeKey(new RecordId("#1:11"), 12));
     expectedResult.add(new CompositeKey(new RecordId("#1:11"), 12));
 
     Assert.assertEquals(result, expectedResult);
+    session.rollback();
   }
 
   @Test
   public void testDocumentToIndexCollectionValueSuccessfulThree() {
-    final EntityImpl document = new EntityImpl();
+    session.begin();
+    final var document = (EntityImpl) session.newEntity();
 
-    document.field("fOne", 12);
-    document.field("fTwo", Arrays.asList(1, 2));
-    document.field("fThree", "test");
+    document.setInt("fOne", 12);
+    document.newEmbeddedList("fTwo").addAll(Arrays.asList(1, 2));
+    document.setString("fThree", "test");
 
-    final CompositeIndexDefinition compositeIndexDefinition =
+    final var compositeIndexDefinition =
         new CompositeIndexDefinition("testCollectionClass");
 
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyType.INTEGER));
+        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyTypeInternal.INTEGER));
     compositeIndexDefinition.addIndex(
-        new PropertyListIndexDefinition("testCollectionClass", "fTwo", PropertyType.INTEGER));
+        new PropertyListIndexDefinition("testCollectionClass", "fTwo",
+            PropertyTypeInternal.INTEGER));
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fThree", PropertyType.STRING));
+        new PropertyIndexDefinition("testCollectionClass", "fThree", PropertyTypeInternal.STRING));
 
-    final Object result = compositeIndexDefinition.getDocumentValueToIndex(db, document);
+    final var result = compositeIndexDefinition.getDocumentValueToIndex(
+        session.getActiveTransaction(), document);
 
-    final ArrayList<CompositeKey> expectedResult = new ArrayList<CompositeKey>();
+    final var expectedResult = new ArrayList<CompositeKey>();
 
     expectedResult.add(new CompositeKey(12, 1, "test"));
     expectedResult.add(new CompositeKey(12, 2, "test"));
 
     Assert.assertEquals(result, expectedResult);
+    session.rollback();
   }
 
   @Test
   public void testDocumentToIndexRidBagValueSuccessfulThree() {
-    final EntityImpl document = new EntityImpl();
+    session.begin();
+    final var document = (EntityImpl) session.newEntity();
 
-    final RidBag ridBag = new RidBag(db);
+    final var ridBag = new RidBag(session);
     ridBag.add(new RecordId("#1:10"));
     ridBag.add(new RecordId("#1:11"));
     ridBag.add(new RecordId("#1:11"));
 
-    document.field("fOne", 12);
-    document.field("fTwo", ridBag);
-    document.field("fThree", "test");
+    document.setProperty("fOne", 12);
+    document.setProperty("fTwo", ridBag);
+    document.setProperty("fThree", "test");
 
-    final CompositeIndexDefinition compositeIndexDefinition =
+    final var compositeIndexDefinition =
         new CompositeIndexDefinition("testCollectionClass");
 
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyType.INTEGER));
+        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyTypeInternal.INTEGER));
     compositeIndexDefinition.addIndex(
         new PropertyRidBagIndexDefinition("testCollectionClass", "fTwo"));
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fThree", PropertyType.STRING));
+        new PropertyIndexDefinition("testCollectionClass", "fThree", PropertyTypeInternal.STRING));
 
-    final Object result = compositeIndexDefinition.getDocumentValueToIndex(db, document);
+    final var result = compositeIndexDefinition.getDocumentValueToIndex(
+        session.getActiveTransaction(), document);
 
-    final ArrayList<CompositeKey> expectedResult = new ArrayList<CompositeKey>();
+    final var expectedResult = new ArrayList<CompositeKey>();
 
     expectedResult.add(new CompositeKey(12, new RecordId("#1:10"), "test"));
     expectedResult.add(new CompositeKey(12, new RecordId("#1:11"), "test"));
     expectedResult.add(new CompositeKey(12, new RecordId("#1:11"), "test"));
 
     Assert.assertEquals(result, expectedResult);
+    session.rollback();
   }
 
   @Test(expected = BaseException.class)
   public void testDocumentToIndexCollectionValueTwoCollections() {
-    final EntityImpl document = new EntityImpl();
+    session.begin();
+    final var document = (EntityImpl) session.newEntity();
 
-    document.field("fOne", List.of(12));
-    document.field("fTwo", Arrays.asList(1, 2));
+    document.newEmbeddedList("fOne").add(12);
+    document.newEmbeddedList("fTwo").addAll(Arrays.asList(1, 2));
 
-    final CompositeIndexDefinition compositeIndexDefinition =
+    final var compositeIndexDefinition =
         new CompositeIndexDefinition("testCollectionClass");
 
     compositeIndexDefinition.addIndex(
-        new PropertyListIndexDefinition("testCollectionClass", "fOne", PropertyType.INTEGER));
+        new PropertyListIndexDefinition("testCollectionClass", "fOne",
+            PropertyTypeInternal.INTEGER));
     compositeIndexDefinition.addIndex(
-        new PropertyListIndexDefinition("testCollectionClass", "fTwo", PropertyType.INTEGER));
-    compositeIndexDefinition.getDocumentValueToIndex(db, document);
+        new PropertyListIndexDefinition("testCollectionClass", "fTwo",
+            PropertyTypeInternal.INTEGER));
+    compositeIndexDefinition.getDocumentValueToIndex(session.getActiveTransaction(), document);
+    session.rollback();
   }
 
-  @Test(expected = DatabaseException.class)
+  @Test(expected = NumberFormatException.class)
   public void testDocumentToIndexWrongField() {
-    final EntityImpl document = new EntityImpl();
+    session.begin();
+    final var document = (EntityImpl) session.newEntity();
 
-    document.field("fOne", "1t2");
-    document.field("fTwo", "test");
+    document.setString("fOne", "1t2");
+    document.setString("fTwo", "test");
 
-    compositeIndex.getDocumentValueToIndex(db, document);
+    compositeIndex.getDocumentValueToIndex(session.getActiveTransaction(), document);
+    session.rollback();
   }
 
   @Test
   public void testGetParamCount() {
-    final int result = compositeIndex.getParamCount();
+    final var result = compositeIndex.getParamCount();
 
     Assert.assertEquals(2, result);
   }
 
   @Test
   public void testGetTypes() {
-    final PropertyType[] result = compositeIndex.getTypes();
+    final var result = compositeIndex.getTypes();
 
     Assert.assertEquals(2, result.length);
-    Assert.assertEquals(PropertyType.INTEGER, result[0]);
-    Assert.assertEquals(PropertyType.STRING, result[1]);
+    Assert.assertEquals(PropertyTypeInternal.INTEGER, result[0]);
+    Assert.assertEquals(PropertyTypeInternal.STRING, result[1]);
   }
 
   @Test
   public void testEmptyIndexReload() {
-    final CompositeIndexDefinition emptyCompositeIndex =
+    final var emptyCompositeIndex =
         new CompositeIndexDefinition("testClass");
 
     emptyCompositeIndex.addIndex(
-        new PropertyIndexDefinition("testClass", "fOne", PropertyType.INTEGER));
+        new PropertyIndexDefinition("testClass", "fOne", PropertyTypeInternal.INTEGER));
     emptyCompositeIndex.addIndex(
-        new PropertyIndexDefinition("testClass", "fTwo", PropertyType.STRING));
+        new PropertyIndexDefinition("testClass", "fTwo", PropertyTypeInternal.STRING));
 
-    db.begin();
-    final EntityImpl docToStore = emptyCompositeIndex.toStream(new EntityImpl());
-    db.save(docToStore);
-    db.commit();
+    final var map = emptyCompositeIndex.toMap(session);
+    final var result = new CompositeIndexDefinition();
 
-    final EntityImpl docToLoad = db.load(docToStore.getIdentity());
-
-    final CompositeIndexDefinition result = new CompositeIndexDefinition();
-    result.fromStream(docToLoad);
+    result.fromMap(map);
 
     Assert.assertEquals(result, emptyCompositeIndex);
   }
 
   @Test
   public void testIndexReload() {
-    final EntityImpl docToStore = compositeIndex.toStream(new EntityImpl());
+    final var map = compositeIndex.toMap(session);
 
-    final CompositeIndexDefinition result = new CompositeIndexDefinition();
-    result.fromStream(docToStore);
+    final var result = new CompositeIndexDefinition();
+    result.fromMap(map);
 
     Assert.assertEquals(result, compositeIndex);
   }
@@ -705,68 +783,65 @@ public class CompositeIndexDefinitionTest extends DbTestBase {
   @Test
   public void testClassOnlyConstructor() {
 
-    final CompositeIndexDefinition emptyCompositeIndex =
+    final var emptyCompositeIndex =
         new CompositeIndexDefinition(
             "testClass",
             Arrays.asList(
-                new PropertyIndexDefinition("testClass", "fOne", PropertyType.INTEGER),
-                new PropertyIndexDefinition("testClass", "fTwo", PropertyType.STRING)));
+                new PropertyIndexDefinition("testClass", "fOne", PropertyTypeInternal.INTEGER),
+                new PropertyIndexDefinition("testClass", "fTwo", PropertyTypeInternal.STRING)));
 
-    final CompositeIndexDefinition emptyCompositeIndexTwo =
+    final var emptyCompositeIndexTwo =
         new CompositeIndexDefinition("testClass");
 
     emptyCompositeIndexTwo.addIndex(
-        new PropertyIndexDefinition("testClass", "fOne", PropertyType.INTEGER));
+        new PropertyIndexDefinition("testClass", "fOne", PropertyTypeInternal.INTEGER));
     emptyCompositeIndexTwo.addIndex(
-        new PropertyIndexDefinition("testClass", "fTwo", PropertyType.STRING));
+        new PropertyIndexDefinition("testClass", "fTwo", PropertyTypeInternal.STRING));
 
     Assert.assertEquals(emptyCompositeIndex, emptyCompositeIndexTwo);
 
-    db.begin();
-    final EntityImpl entityToStore = emptyCompositeIndex.toStream(new EntityImpl());
-    db.save(entityToStore);
-    db.commit();
-
-    final EntityImpl docToLoad = db.load(entityToStore.getIdentity());
-
-    final CompositeIndexDefinition result = new CompositeIndexDefinition();
-    result.fromStream(docToLoad);
+    final var map = emptyCompositeIndex.toMap(session);
+    final var result = new CompositeIndexDefinition();
+    result.fromMap(map);
 
     Assert.assertEquals(result, emptyCompositeIndexTwo);
   }
 
   @Test
   public void testProcessChangeListEventsOne() {
-    final CompositeIndexDefinition compositeIndexDefinition = new CompositeIndexDefinition();
+    session.begin();
+    final var compositeIndexDefinition = new CompositeIndexDefinition();
 
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyType.INTEGER));
+        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyTypeInternal.INTEGER));
     compositeIndexDefinition.addIndex(
-        new PropertyListIndexDefinition("testCollectionClass", "fTwo", PropertyType.STRING));
+        new PropertyListIndexDefinition("testCollectionClass", "fTwo",
+            PropertyTypeInternal.STRING));
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fThree", PropertyType.INTEGER));
+        new PropertyIndexDefinition("testCollectionClass", "fThree", PropertyTypeInternal.INTEGER));
 
-    final EntityImpl doc = new EntityImpl();
-    RecordInternal.unsetDirty(doc);
+    final var doc = (EntityImpl) session.newEntity();
+    final var rec = (RecordAbstract) doc;
+    rec.unsetDirty();
     Assert.assertFalse(doc.isDirty());
 
-    final TrackedList<String> trackedList = new TrackedList<String>(doc);
+    final var trackedList = new EntityEmbeddedSetImpl<String>(doc);
     trackedList.enableTracking(doc);
     trackedList.add("l1");
     trackedList.add("l2");
     trackedList.add("l3");
     trackedList.remove("l2");
 
-    Object2IntOpenHashMap<CompositeKey> keysToAdd = new Object2IntOpenHashMap<>();
+    var keysToAdd = new Object2IntOpenHashMap<CompositeKey>();
     keysToAdd.defaultReturnValue(-1);
 
-    Object2IntOpenHashMap<CompositeKey> keysToRemove = new Object2IntOpenHashMap<>();
+    var keysToRemove = new Object2IntOpenHashMap<CompositeKey>();
     keysToRemove.defaultReturnValue(-1);
 
-    for (MultiValueChangeEvent<Object, Object> multiValueChangeEvent :
+    for (var multiValueChangeEvent :
         trackedList.getTimeLine().getMultiValueChangeEvents()) {
       compositeIndexDefinition.processChangeEvent(
-          db, multiValueChangeEvent, keysToAdd, keysToRemove, 2, 3);
+          session.getActiveTransaction(), multiValueChangeEvent, keysToAdd, keysToRemove, 2, 3);
     }
 
     Assert.assertEquals(0, keysToRemove.size());
@@ -774,20 +849,21 @@ public class CompositeIndexDefinitionTest extends DbTestBase {
 
     Assert.assertTrue(keysToAdd.containsKey(new CompositeKey(2, "l1", 3)));
     Assert.assertTrue(keysToAdd.containsKey(new CompositeKey(2, "l3", 3)));
+    session.rollback();
   }
 
   @Test
   public void testProcessChangeRidBagEventsOne() {
-    final CompositeIndexDefinition compositeIndexDefinition = new CompositeIndexDefinition();
+    final var compositeIndexDefinition = new CompositeIndexDefinition();
 
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyType.INTEGER));
+        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyTypeInternal.INTEGER));
     compositeIndexDefinition.addIndex(
         new PropertyRidBagIndexDefinition("testCollectionClass", "fTwo"));
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fThree", PropertyType.INTEGER));
+        new PropertyIndexDefinition("testCollectionClass", "fThree", PropertyTypeInternal.INTEGER));
 
-    final RidBag ridBag = new RidBag(db);
+    final var ridBag = new RidBag(session);
     ridBag.enableTracking(null);
     ridBag.add(new RecordId("#10:0"));
     ridBag.add(new RecordId("#10:1"));
@@ -796,16 +872,16 @@ public class CompositeIndexDefinitionTest extends DbTestBase {
     ridBag.remove(new RecordId("#10:0"));
     ridBag.remove(new RecordId("#10:1"));
 
-    Object2IntOpenHashMap<CompositeKey> keysToAdd = new Object2IntOpenHashMap<>();
+    var keysToAdd = new Object2IntOpenHashMap<CompositeKey>();
     keysToAdd.defaultReturnValue(-1);
 
-    Object2IntOpenHashMap<CompositeKey> keysToRemove = new Object2IntOpenHashMap<>();
+    var keysToRemove = new Object2IntOpenHashMap<CompositeKey>();
     keysToRemove.defaultReturnValue(-1);
 
-    for (MultiValueChangeEvent<Object, Object> multiValueChangeEvent :
+    for (var multiValueChangeEvent :
         ridBag.getTimeLine().getMultiValueChangeEvents()) {
       compositeIndexDefinition.processChangeEvent(
-          db, multiValueChangeEvent, keysToAdd, keysToRemove, 2, 3);
+          session.getActiveTransaction(), multiValueChangeEvent, keysToAdd, keysToRemove, 2, 3);
     }
 
     Assert.assertEquals(0, keysToRemove.size());
@@ -817,20 +893,23 @@ public class CompositeIndexDefinitionTest extends DbTestBase {
 
   @Test
   public void testProcessChangeListEventsTwo() {
-    final CompositeIndexDefinition compositeIndexDefinition = new CompositeIndexDefinition();
+    session.begin();
+    final var compositeIndexDefinition = new CompositeIndexDefinition();
 
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyType.INTEGER));
+        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyTypeInternal.INTEGER));
     compositeIndexDefinition.addIndex(
-        new PropertyListIndexDefinition("testCollectionClass", "fTwo", PropertyType.STRING));
+        new PropertyListIndexDefinition("testCollectionClass", "fTwo",
+            PropertyTypeInternal.STRING));
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fThree", PropertyType.INTEGER));
+        new PropertyIndexDefinition("testCollectionClass", "fThree", PropertyTypeInternal.INTEGER));
 
-    final EntityImpl doc = new EntityImpl();
-    RecordInternal.unsetDirty(doc);
+    final var doc = (EntityImpl) session.newEntity();
+    final var rec = (RecordAbstract) doc;
+    rec.unsetDirty();
     Assert.assertFalse(doc.isDirty());
 
-    final TrackedList<String> trackedList = new TrackedList<String>(doc);
+    final var trackedList = new EntityEmbeddedListImpl<String>(doc);
 
     trackedList.add("l1");
     trackedList.add("l2");
@@ -841,16 +920,16 @@ public class CompositeIndexDefinitionTest extends DbTestBase {
     trackedList.add("l4");
     trackedList.remove("l1");
 
-    Object2IntOpenHashMap<CompositeKey> keysToAdd = new Object2IntOpenHashMap<>();
+    var keysToAdd = new Object2IntOpenHashMap<CompositeKey>();
     keysToAdd.defaultReturnValue(-1);
 
-    Object2IntOpenHashMap<CompositeKey> keysToRemove = new Object2IntOpenHashMap<>();
+    var keysToRemove = new Object2IntOpenHashMap<CompositeKey>();
     keysToRemove.defaultReturnValue(-1);
 
-    for (MultiValueChangeEvent<Object, Object> multiValueChangeEvent :
+    for (var multiValueChangeEvent :
         trackedList.getTimeLine().getMultiValueChangeEvents()) {
       compositeIndexDefinition.processChangeEvent(
-          db, multiValueChangeEvent, keysToAdd, keysToRemove, 2, 3);
+          session.getActiveTransaction(), multiValueChangeEvent, keysToAdd, keysToRemove, 2, 3);
     }
 
     Assert.assertEquals(1, keysToRemove.size());
@@ -858,20 +937,21 @@ public class CompositeIndexDefinitionTest extends DbTestBase {
 
     Assert.assertTrue(keysToAdd.containsKey(new CompositeKey(2, "l4", 3)));
     Assert.assertTrue(keysToRemove.containsKey(new CompositeKey(2, "l1", 3)));
+    session.rollback();
   }
 
   @Test
   public void testProcessChangeRidBagEventsTwo() {
-    final CompositeIndexDefinition compositeIndexDefinition = new CompositeIndexDefinition();
+    final var compositeIndexDefinition = new CompositeIndexDefinition();
 
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyType.INTEGER));
+        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyTypeInternal.INTEGER));
     compositeIndexDefinition.addIndex(
         new PropertyRidBagIndexDefinition("testCollectionClass", "fTwo"));
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fThree", PropertyType.INTEGER));
+        new PropertyIndexDefinition("testCollectionClass", "fThree", PropertyTypeInternal.INTEGER));
 
-    final RidBag ridBag = new RidBag(db);
+    final var ridBag = new RidBag(session);
 
     ridBag.add(new RecordId("#10:1"));
     ridBag.add(new RecordId("#10:2"));
@@ -883,16 +963,16 @@ public class CompositeIndexDefinitionTest extends DbTestBase {
     ridBag.add(new RecordId("#10:4"));
     ridBag.remove(new RecordId("#10:1"));
 
-    Object2IntOpenHashMap<CompositeKey> keysToAdd = new Object2IntOpenHashMap<>();
+    var keysToAdd = new Object2IntOpenHashMap<CompositeKey>();
     keysToAdd.defaultReturnValue(-1);
 
-    Object2IntOpenHashMap<CompositeKey> keysToRemove = new Object2IntOpenHashMap<>();
+    var keysToRemove = new Object2IntOpenHashMap<CompositeKey>();
     keysToRemove.defaultReturnValue(-1);
 
-    for (MultiValueChangeEvent<Object, Object> multiValueChangeEvent :
+    for (var multiValueChangeEvent :
         ridBag.getTimeLine().getMultiValueChangeEvents()) {
       compositeIndexDefinition.processChangeEvent(
-          db, multiValueChangeEvent, keysToAdd, keysToRemove, 2, 3);
+          session.getActiveTransaction(), multiValueChangeEvent, keysToAdd, keysToRemove, 2, 3);
     }
 
     Assert.assertEquals(1, keysToRemove.size());
@@ -904,37 +984,40 @@ public class CompositeIndexDefinitionTest extends DbTestBase {
 
   @Test
   public void testProcessChangeSetEventsOne() {
-    final CompositeIndexDefinition compositeIndexDefinition = new CompositeIndexDefinition();
+    final var compositeIndexDefinition = new CompositeIndexDefinition();
 
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyType.INTEGER));
+        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyTypeInternal.INTEGER));
     compositeIndexDefinition.addIndex(
-        new PropertyListIndexDefinition("testCollectionClass", "fTwo", PropertyType.STRING));
+        new PropertyListIndexDefinition("testCollectionClass", "fTwo",
+            PropertyTypeInternal.STRING));
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fThree", PropertyType.INTEGER));
+        new PropertyIndexDefinition("testCollectionClass", "fThree", PropertyTypeInternal.INTEGER));
 
-    final EntityImpl doc = new EntityImpl();
-    RecordInternal.unsetDirty(doc);
+    session.begin();
+    final var doc = (EntityImpl) session.newEntity();
+    final var rec = (RecordAbstract) doc;
+    rec.unsetDirty();
     Assert.assertFalse(doc.isDirty());
 
-    final TrackedSet<String> trackedSet = new TrackedSet<String>(doc);
+    final var embeddedSet = new EntityEmbeddedSetImpl<String>(doc);
 
-    trackedSet.enableTracking(doc);
-    trackedSet.add("l1");
-    trackedSet.add("l2");
-    trackedSet.add("l3");
-    trackedSet.remove("l2");
+    embeddedSet.enableTracking(doc);
+    embeddedSet.add("l1");
+    embeddedSet.add("l2");
+    embeddedSet.add("l3");
+    embeddedSet.remove("l2");
 
-    Object2IntOpenHashMap<CompositeKey> keysToAdd = new Object2IntOpenHashMap<>();
+    var keysToAdd = new Object2IntOpenHashMap<CompositeKey>();
     keysToAdd.defaultReturnValue(-1);
 
-    Object2IntOpenHashMap<CompositeKey> keysToRemove = new Object2IntOpenHashMap<>();
+    var keysToRemove = new Object2IntOpenHashMap<CompositeKey>();
     keysToRemove.defaultReturnValue(-1);
 
-    for (MultiValueChangeEvent<Object, Object> multiValueChangeEvent :
-        trackedSet.getTimeLine().getMultiValueChangeEvents()) {
+    for (var multiValueChangeEvent :
+        embeddedSet.getTimeLine().getMultiValueChangeEvents()) {
       compositeIndexDefinition.processChangeEvent(
-          db, multiValueChangeEvent, keysToAdd, keysToRemove, 2, 3);
+          session.getActiveTransaction(), multiValueChangeEvent, keysToAdd, keysToRemove, 2, 3);
     }
 
     Assert.assertEquals(0, keysToRemove.size());
@@ -942,44 +1025,49 @@ public class CompositeIndexDefinitionTest extends DbTestBase {
 
     Assert.assertTrue(keysToAdd.containsKey(new CompositeKey(2, "l1", 3)));
     Assert.assertTrue(keysToAdd.containsKey(new CompositeKey(2, "l3", 3)));
+    session.rollback();
   }
 
   @Test
   public void testProcessChangeSetEventsTwo() {
-    final CompositeIndexDefinition compositeIndexDefinition = new CompositeIndexDefinition();
+    final var compositeIndexDefinition = new CompositeIndexDefinition();
 
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyType.INTEGER));
+        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyTypeInternal.INTEGER));
     compositeIndexDefinition.addIndex(
-        new PropertyListIndexDefinition("testCollectionClass", "fTwo", PropertyType.STRING));
+        new PropertyListIndexDefinition("testCollectionClass", "fTwo",
+            PropertyTypeInternal.STRING));
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fThree", PropertyType.INTEGER));
+        new PropertyIndexDefinition("testCollectionClass", "fThree", PropertyTypeInternal.INTEGER));
 
-    final EntityImpl doc = new EntityImpl();
-    RecordInternal.unsetDirty(doc);
+    session.begin();
+    final var doc = (EntityImpl) session.newEntity();
+    final var rec = (RecordAbstract) doc;
+    rec.unsetDirty();
     Assert.assertFalse(doc.isDirty());
 
-    final TrackedSet<String> trackedMap = new TrackedSet<String>(doc);
+    final var embeddedSet = new EntityEmbeddedSetImpl<String>(doc);
 
-    trackedMap.add("l1");
-    trackedMap.add("l2");
-    trackedMap.add("l3");
-    trackedMap.remove("l2");
+    embeddedSet.add("l1");
+    embeddedSet.add("l2");
+    embeddedSet.add("l3");
+    embeddedSet.remove("l2");
 
-    trackedMap.enableTracking(doc);
-    trackedMap.add("l4");
-    trackedMap.remove("l1");
+    embeddedSet.enableTracking(doc);
+    embeddedSet.add("l4");
+    embeddedSet.remove("l1");
 
-    Object2IntOpenHashMap<CompositeKey> keysToAdd = new Object2IntOpenHashMap<>();
+    var keysToAdd = new Object2IntOpenHashMap<CompositeKey>();
     keysToAdd.defaultReturnValue(-1);
 
-    Object2IntOpenHashMap<CompositeKey> keysToRemove = new Object2IntOpenHashMap<>();
+    var keysToRemove = new Object2IntOpenHashMap<CompositeKey>();
     keysToRemove.defaultReturnValue(-1);
 
-    for (MultiValueChangeEvent<Object, Object> multiValueChangeEvent :
-        trackedMap.getTimeLine().getMultiValueChangeEvents()) {
+    for (var multiValueChangeEvent :
+        embeddedSet.getTimeLine().getMultiValueChangeEvents()) {
       compositeIndexDefinition.processChangeEvent(
-          db, multiValueChangeEvent, keysToAdd, keysToRemove, 2, 3);
+          session.getActiveTransaction(),
+          multiValueChangeEvent, keysToAdd, keysToRemove, 2, 3);
     }
 
     Assert.assertEquals(1, keysToRemove.size());
@@ -987,42 +1075,45 @@ public class CompositeIndexDefinitionTest extends DbTestBase {
 
     Assert.assertTrue(keysToAdd.containsKey(new CompositeKey(2, "l4", 3)));
     Assert.assertTrue(keysToRemove.containsKey(new CompositeKey(2, "l1", 3)));
+    session.rollback();
   }
 
   @Test
   public void testProcessChangeKeyMapEventsOne() {
-    final CompositeIndexDefinition compositeIndexDefinition = new CompositeIndexDefinition();
+    final var compositeIndexDefinition = new CompositeIndexDefinition();
 
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyType.INTEGER));
+        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyTypeInternal.INTEGER));
     compositeIndexDefinition.addIndex(
         new PropertyMapIndexDefinition(
-            "testCollectionClass", "fTwo", PropertyType.STRING,
+            "testCollectionClass", "fTwo", PropertyTypeInternal.STRING,
             PropertyMapIndexDefinition.INDEX_BY.KEY));
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fThree", PropertyType.INTEGER));
+        new PropertyIndexDefinition("testCollectionClass", "fThree", PropertyTypeInternal.INTEGER));
 
-    final EntityImpl doc = new EntityImpl();
-    RecordInternal.unsetDirty(doc);
+    session.begin();
+    final var doc = (EntityImpl) session.newEntity();
+    final var rec = (RecordAbstract) doc;
+    rec.unsetDirty();
     Assert.assertFalse(doc.isDirty());
 
-    final TrackedMap<String> trackedMap = new TrackedMap<String>(doc);
+    final var trackedMap = new EntityEmbeddedMapImpl<String>(doc);
     trackedMap.enableTracking(doc);
     trackedMap.put("k1", "v1");
     trackedMap.put("k2", "v2");
     trackedMap.put("k3", "v3");
     trackedMap.remove("k2");
 
-    Object2IntOpenHashMap<CompositeKey> keysToAdd = new Object2IntOpenHashMap<>();
+    var keysToAdd = new Object2IntOpenHashMap<CompositeKey>();
     keysToAdd.defaultReturnValue(-1);
 
-    Object2IntOpenHashMap<CompositeKey> keysToRemove = new Object2IntOpenHashMap<>();
+    var keysToRemove = new Object2IntOpenHashMap<CompositeKey>();
     keysToRemove.defaultReturnValue(-1);
 
-    for (MultiValueChangeEvent<Object, Object> multiValueChangeEvent :
+    for (var multiValueChangeEvent :
         trackedMap.getTimeLine().getMultiValueChangeEvents()) {
       compositeIndexDefinition.processChangeEvent(
-          db, multiValueChangeEvent, keysToAdd, keysToRemove, 2, 3);
+          session.getActiveTransaction(), multiValueChangeEvent, keysToAdd, keysToRemove, 2, 3);
     }
 
     Assert.assertEquals(0, keysToRemove.size());
@@ -1030,26 +1121,29 @@ public class CompositeIndexDefinitionTest extends DbTestBase {
 
     Assert.assertTrue(keysToAdd.containsKey(new CompositeKey(2, "k1", 3)));
     Assert.assertTrue(keysToAdd.containsKey(new CompositeKey(2, "k3", 3)));
+    session.rollback();
   }
 
   @Test
   public void testProcessChangeKeyMapEventsTwo() {
-    final CompositeIndexDefinition compositeIndexDefinition = new CompositeIndexDefinition();
+    final var compositeIndexDefinition = new CompositeIndexDefinition();
 
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyType.INTEGER));
+        new PropertyIndexDefinition("testCollectionClass", "fOne", PropertyTypeInternal.INTEGER));
     compositeIndexDefinition.addIndex(
         new PropertyMapIndexDefinition(
-            "testCollectionClass", "fTwo", PropertyType.STRING,
+            "testCollectionClass", "fTwo", PropertyTypeInternal.STRING,
             PropertyMapIndexDefinition.INDEX_BY.KEY));
     compositeIndexDefinition.addIndex(
-        new PropertyIndexDefinition("testCollectionClass", "fThree", PropertyType.INTEGER));
+        new PropertyIndexDefinition("testCollectionClass", "fThree", PropertyTypeInternal.INTEGER));
 
-    final EntityImpl doc = new EntityImpl();
-    RecordInternal.unsetDirty(doc);
+    session.begin();
+    final var doc = (EntityImpl) session.newEntity();
+    final var rec = (RecordAbstract) doc;
+    rec.unsetDirty();
     Assert.assertFalse(doc.isDirty());
 
-    final TrackedMap<String> trackedMap = new TrackedMap<String>(doc);
+    final var trackedMap = new EntityEmbeddedMapImpl<String>(doc);
 
     trackedMap.put("k1", "v1");
     trackedMap.put("k2", "v2");
@@ -1060,16 +1154,16 @@ public class CompositeIndexDefinitionTest extends DbTestBase {
     trackedMap.put("k4", "v4");
     trackedMap.remove("k1");
 
-    Object2IntOpenHashMap<CompositeKey> keysToAdd = new Object2IntOpenHashMap<>();
+    var keysToAdd = new Object2IntOpenHashMap<CompositeKey>();
     keysToAdd.defaultReturnValue(-1);
 
-    Object2IntOpenHashMap<CompositeKey> keysToRemove = new Object2IntOpenHashMap<>();
+    var keysToRemove = new Object2IntOpenHashMap<CompositeKey>();
     keysToRemove.defaultReturnValue(-1);
 
-    for (MultiValueChangeEvent<Object, Object> multiValueChangeEvent :
+    for (var multiValueChangeEvent :
         trackedMap.getTimeLine().getMultiValueChangeEvents()) {
       compositeIndexDefinition.processChangeEvent(
-          db, multiValueChangeEvent, keysToAdd, keysToRemove, 2, 3);
+          session.getActiveTransaction(), multiValueChangeEvent, keysToAdd, keysToRemove, 2, 3);
     }
 
     Assert.assertEquals(1, keysToRemove.size());
@@ -1077,6 +1171,7 @@ public class CompositeIndexDefinitionTest extends DbTestBase {
 
     Assert.assertTrue(keysToAdd.containsKey(new CompositeKey(2, "k4", 3)));
     Assert.assertTrue(keysToRemove.containsKey(new CompositeKey(2, "k1", 3)));
+    session.rollback();
   }
 
   @Test
