@@ -14,13 +14,15 @@
 package com.jetbrains.youtrack.db.internal.spatial.shape;
 
 import com.jetbrains.youtrack.db.api.config.GlobalConfiguration;
-import com.jetbrains.youtrack.db.internal.core.db.DatabaseSessionInternal;
-import com.jetbrains.youtrack.db.api.schema.Schema;
-import com.jetbrains.youtrack.db.api.schema.SchemaClass;
+import com.jetbrains.youtrack.db.api.query.Result;
+import com.jetbrains.youtrack.db.api.record.EmbeddedEntity;
 import com.jetbrains.youtrack.db.api.schema.PropertyType;
-import com.jetbrains.youtrack.db.internal.core.record.impl.EntityImpl;
+import com.jetbrains.youtrack.db.api.schema.Schema;
+import com.jetbrains.youtrack.db.internal.core.db.DatabaseSessionInternal;
+import com.jetbrains.youtrack.db.internal.core.sql.executor.ResultInternal;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 import org.locationtech.jts.geom.Coordinate;
 import org.locationtech.jts.geom.Geometry;
@@ -48,35 +50,33 @@ public class PolygonShapeBuilder extends ComplexShapeBuilder<JtsGeometry> {
   public void initClazz(DatabaseSessionInternal db) {
 
     Schema schema = db.getMetadata().getSchema();
-    SchemaClass polygon = schema.createAbstractClass(getName(), superClass(db));
-    polygon.createProperty(db, COORDINATES, PropertyType.EMBEDDEDLIST, PropertyType.EMBEDDEDLIST);
+    var polygon = schema.createAbstractClass(getName(), superClass(db));
+    polygon.createProperty(COORDINATES, PropertyType.EMBEDDEDLIST, PropertyType.EMBEDDEDLIST);
 
     if (GlobalConfiguration.SPATIAL_ENABLE_DIRECT_WKT_READER.getValueAsBoolean()) {
-      SchemaClass polygonZ = schema.createAbstractClass(getName() + "Z", superClass(db));
-      polygonZ.createProperty(db, COORDINATES, PropertyType.EMBEDDEDLIST,
+      var polygonZ = schema.createAbstractClass(getName() + "Z", superClass(db));
+      polygonZ.createProperty(COORDINATES, PropertyType.EMBEDDEDLIST,
           PropertyType.EMBEDDEDLIST);
     }
   }
 
   @Override
-  public JtsGeometry fromDoc(EntityImpl document) {
-    validate(document);
-    List<List<List<Number>>> coordinates = document.field("coordinates");
-
+  public JtsGeometry fromResult(Result document) {
+    List<List<List<Number>>> coordinates = document.getProperty("coordinates");
     return toShape(createPolygon(coordinates));
   }
 
-  protected Polygon createPolygon(List<List<List<Number>>> coordinates) {
+  protected static Polygon createPolygon(List<List<List<Number>>> coordinates) {
     Polygon shape;
     if (coordinates.size() == 1) {
-      List<List<Number>> coords = coordinates.get(0);
-      LinearRing linearRing = createLinearRing(coords);
+      var coords = coordinates.getFirst();
+      var linearRing = createLinearRing(coords);
       shape = GEOMETRY_FACTORY.createPolygon(linearRing);
     } else {
-      int i = 0;
+      var i = 0;
       LinearRing outerRing = null;
-      LinearRing[] holes = new LinearRing[coordinates.size() - 1];
-      for (List<List<Number>> coordinate : coordinates) {
+      var holes = new LinearRing[coordinates.size() - 1];
+      for (var coordinate : coordinates) {
         if (i == 0) {
           outerRing = createLinearRing(coordinate);
         } else {
@@ -89,10 +89,10 @@ public class PolygonShapeBuilder extends ComplexShapeBuilder<JtsGeometry> {
     return shape;
   }
 
-  protected LinearRing createLinearRing(List<List<Number>> coords) {
-    Coordinate[] crs = new Coordinate[coords.size()];
-    int i = 0;
-    for (List<Number> points : coords) {
+  protected static LinearRing createLinearRing(List<List<Number>> coords) {
+    var crs = new Coordinate[coords.size()];
+    var i = 0;
+    for (var points : coords) {
       crs[i] = new Coordinate(points.get(0).doubleValue(), points.get(1).doubleValue());
       i++;
     }
@@ -100,34 +100,35 @@ public class PolygonShapeBuilder extends ComplexShapeBuilder<JtsGeometry> {
   }
 
   @Override
-  public EntityImpl toDoc(JtsGeometry shape) {
+  public EmbeddedEntity toEmbeddedEntity(JtsGeometry shape, DatabaseSessionInternal session) {
 
-    EntityImpl doc = new EntityImpl(getName());
-    Polygon polygon = (Polygon) shape.getGeom();
-    List<List<List<Double>>> polyCoordinates = coordinatesFromPolygon(polygon);
-    doc.field(COORDINATES, polyCoordinates);
-    return doc;
+    var entity = session.newEmbeddedEntity(getName());
+    var polygon = (Polygon) shape.getGeom();
+    var polyCoordinates = coordinatesFromPolygon(polygon);
+    entity.newEmbeddedList(COORDINATES, polyCoordinates);
+    return entity;
   }
 
   @Override
-  protected EntityImpl toDoc(JtsGeometry shape, Geometry geometry) {
+  protected EmbeddedEntity toEmbeddedEntity(JtsGeometry shape, Geometry geometry,
+      DatabaseSessionInternal session) {
     if (geometry == null || Double.isNaN(geometry.getCoordinate().getZ())) {
-      return toDoc(shape);
+      return toEmbeddedEntity(shape, session);
     }
 
-    EntityImpl doc = new EntityImpl(getName() + "Z");
-    Polygon polygon = (Polygon) shape.getGeom();
-    List<List<List<Double>>> polyCoordinates = coordinatesFromPolygonZ(geometry);
-    doc.field(COORDINATES, polyCoordinates);
-    return doc;
+    var entity = session.newEmbeddedEntity(getName() + "Z");
+    var polygon = (Polygon) shape.getGeom();
+    var polyCoordinates = coordinatesFromPolygonZ(geometry);
+    entity.newEmbeddedList(COORDINATES, polyCoordinates);
+    return entity;
   }
 
   protected List<List<List<Double>>> coordinatesFromPolygon(Polygon polygon) {
     List<List<List<Double>>> polyCoordinates = new ArrayList<List<List<Double>>>();
     LineString exteriorRing = polygon.getExteriorRing();
     polyCoordinates.add(coordinatesFromLineString(exteriorRing));
-    int i = polygon.getNumInteriorRing();
-    for (int j = 0; j < i; j++) {
+    var i = polygon.getNumInteriorRing();
+    for (var j = 0; j < i; j++) {
       LineString interiorRingN = polygon.getInteriorRingN(j);
       polyCoordinates.add(coordinatesFromLineString(interiorRingN));
     }
@@ -136,18 +137,18 @@ public class PolygonShapeBuilder extends ComplexShapeBuilder<JtsGeometry> {
 
   protected List<List<List<Double>>> coordinatesFromPolygonZ(Geometry polygon) {
     List<List<List<Double>>> polyCoordinates = new ArrayList<>();
-    for (int i = 0; i < polygon.getNumGeometries(); i++) {
+    for (var i = 0; i < polygon.getNumGeometries(); i++) {
       polyCoordinates.add(coordinatesFromLineStringZ(polygon.getGeometryN(i)));
     }
     return polyCoordinates;
   }
 
   @Override
-  public String asText(EntityImpl document) {
-    if (document.getClassName().equals("OPolygonZ")) {
-      List<List<List<Double>>> coordinates = document.getProperty("coordinates");
+  public String asText(EmbeddedEntity entity) {
+    if (Objects.equals(entity.getSchemaClassName(), "OPolygonZ")) {
+      List<List<List<Double>>> coordinates = entity.getProperty("coordinates");
 
-      String result =
+      var result =
           coordinates.stream()
               .map(
                   poly ->
@@ -156,15 +157,14 @@ public class PolygonShapeBuilder extends ComplexShapeBuilder<JtsGeometry> {
                           .map(
                               point ->
                                   (point.stream()
-                                      .map(coord -> format(coord))
+                                      .map(this::format)
                                       .collect(Collectors.joining(" "))))
                           .collect(Collectors.joining(", "))
                           + ")")
               .collect(Collectors.joining(" "));
       return "POLYGON Z (" + result + ")";
-
     } else {
-      return super.asText(document);
+      return super.asText(entity);
     }
   }
 }
