@@ -17,19 +17,15 @@ package com.jetbrains.youtrack.db.auto;
 
 import com.jetbrains.youtrack.db.api.exception.DatabaseException;
 import com.jetbrains.youtrack.db.api.exception.ValidationException;
-import com.jetbrains.youtrack.db.api.query.Result;
-import com.jetbrains.youtrack.db.api.record.Entity;
 import com.jetbrains.youtrack.db.internal.common.util.Pair;
 import com.jetbrains.youtrack.db.internal.core.command.BasicCommandContext;
 import com.jetbrains.youtrack.db.internal.core.db.DatabaseSessionInternal;
 import com.jetbrains.youtrack.db.internal.core.db.DatabaseSessionInternal.ATTRIBUTES_INTERNAL;
-import com.jetbrains.youtrack.db.internal.core.record.impl.DocumentComparator;
+import com.jetbrains.youtrack.db.internal.core.record.impl.EntityComparator;
 import com.jetbrains.youtrack.db.internal.core.record.impl.EntityImpl;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
 import java.util.Collections;
-import java.util.Date;
-import java.util.List;
 import org.testng.Assert;
 import org.testng.annotations.Optional;
 import org.testng.annotations.Parameters;
@@ -48,41 +44,40 @@ public class CRUDDocumentValidationTest extends BaseDBTest {
 
   @Test
   public void openDb() {
-    database.begin();
-    account = new EntityImpl("Account");
-    account.save();
-    account.field("id", "1234567890");
-    database.commit();
+    session.begin();
+    account = ((EntityImpl) session.newEntity("Account"));
+
+    account.setProperty("id", "1234567890");
+    session.commit();
   }
 
   @Test(dependsOnMethods = "validationMandatoryNullableNoCloseDb")
-  public void validationDisabledAdDatabaseLevel() throws ParseException {
-    database.getMetadata().reload();
+  public void validationDisabledAdDatabaseLevel() {
+    session.getMetadata().reload();
     try {
-      EntityImpl entity = new EntityImpl("MyTestClass");
-      database.begin();
-      entity.save();
-      database.commit();
+      session.begin();
+      var entity = ((EntityImpl) session.newEntity("MyTestClass"));
+      session.commit();
       Assert.fail();
     } catch (ValidationException ignored) {
     }
 
-    database
-        .command("ALTER DATABASE " + ATTRIBUTES_INTERNAL.VALIDATION.name() + " FALSE")
+    session
+        .execute("ALTER DATABASE " + ATTRIBUTES_INTERNAL.VALIDATION.name() + " FALSE")
         .close();
     try {
-      EntityImpl doc = new EntityImpl("MyTestClass");
-      database.begin();
-      doc.save();
-      database.commit();
+      session.begin();
+      var doc = ((EntityImpl) session.newEntity("MyTestClass"));
+      session.commit();
 
-      database.begin();
-      database.bindToSession(doc).delete();
-      database.commit();
+      session.begin();
+      var activeTx = session.getActiveTransaction();
+      activeTx.<EntityImpl>load(doc).delete();
+      session.commit();
     } finally {
-      database.setValidationEnabled(true);
-      database
-          .command("ALTER DATABASE " + DatabaseSessionInternal.ATTRIBUTES_INTERNAL.VALIDATION.name()
+      session.setValidationEnabled(true);
+      session
+          .execute("ALTER DATABASE " + DatabaseSessionInternal.ATTRIBUTES_INTERNAL.VALIDATION.name()
               + " TRUE")
           .close();
     }
@@ -90,23 +85,23 @@ public class CRUDDocumentValidationTest extends BaseDBTest {
 
   @Test(dependsOnMethods = "openDb", expectedExceptions = ValidationException.class)
   public void validationMandatory() {
-    database.begin();
-    record = database.newInstance("Whiz");
-    record.clear();
-    record.save();
-    database.commit();
+    session.begin();
+    record = session.newInstance("Whiz");
+
+    session.commit();
   }
 
   @Test(dependsOnMethods = "validationMandatory", expectedExceptions = ValidationException.class)
   public void validationMinString() {
-    database.begin();
-    record = database.newInstance("Whiz");
-    account = database.bindToSession(account);
-    record.field("account", account);
-    record.field("id", 23723);
-    record.field("text", "");
-    record.save();
-    database.commit();
+    session.begin();
+    record = session.newInstance("Whiz");
+    var activeTx = session.getActiveTransaction();
+    account = activeTx.load(account);
+    record.setProperty("account", account);
+    record.setProperty("id", 23723);
+    record.setProperty("text", "");
+
+    session.commit();
   }
 
   @Test(
@@ -114,17 +109,18 @@ public class CRUDDocumentValidationTest extends BaseDBTest {
       expectedExceptions = ValidationException.class,
       expectedExceptionsMessageRegExp = "(?s).*more.*than.*")
   public void validationMaxString() {
-    database.begin();
-    record = database.newInstance("Whiz");
-    account = database.bindToSession(account);
-    record.field("account", account);
-    record.field("id", 23723);
-    record.field(
+    session.begin();
+    record = session.newInstance("Whiz");
+    var activeTx = session.getActiveTransaction();
+    account = activeTx.load(account);
+    record.setProperty("account", account);
+    record.setProperty("id", 23723);
+    record.setProperty(
         "text",
         "clfdkkjsd hfsdkjhf fjdkghjkfdhgjdfh gfdgjfdkhgfd skdjaksdjf skdjf sdkjfsd jfkldjfkjsdf"
             + " kljdk fsdjf kldjgjdhjg khfdjgk hfjdg hjdfhgjkfhdgj kfhdjghrjg");
-    record.save();
-    database.commit();
+
+    session.commit();
   }
 
   @Test(
@@ -132,155 +128,159 @@ public class CRUDDocumentValidationTest extends BaseDBTest {
       expectedExceptions = ValidationException.class,
       expectedExceptionsMessageRegExp = "(?s).*precedes.*")
   public void validationMinDate() throws ParseException {
-    database.begin();
-    record = database.newInstance("Whiz");
-    account = database.bindToSession(account);
-    record.field("account", account);
-    record.field("date", new SimpleDateFormat("dd/MM/yyyy").parse("01/33/1976"));
-    record.field("text", "test");
-    record.save();
-    database.commit();
+    session.begin();
+    record = session.newInstance("Whiz");
+    var activeTx = session.getActiveTransaction();
+    account = activeTx.load(account);
+    record.setProperty("account", account);
+    record.setPropertyInChain("date", new SimpleDateFormat("dd/MM/yyyy").parse("01/33/1976"));
+    record.setProperty("text", "test");
+
+    session.commit();
   }
 
   @Test(dependsOnMethods = "validationMinDate", expectedExceptions = DatabaseException.class)
-  public void validationEmbeddedType() throws ParseException {
-    database.begin();
-    record = database.newInstance("Whiz");
-    record.field("account", database.geCurrentUser());
-    record.save();
-    database.commit();
+  public void validationEmbeddedType() {
+    session.begin();
+    record = session.newInstance("Whiz");
+    record.setPropertyInChain("account", session.getCurrentUser());
+
+    session.commit();
   }
 
   @Test(
       dependsOnMethods = "validationEmbeddedType",
       expectedExceptions = ValidationException.class)
-  public void validationStrictClass() throws ParseException {
-    database.begin();
-    EntityImpl doc = new EntityImpl("StrictTest");
-    doc.field("id", 122112);
-    doc.field("antani", "122112");
-    doc.save();
-    database.commit();
+  public void validationStrictClass() {
+    session.begin();
+    var doc = ((EntityImpl) session.newEntity("StrictTest"));
+    doc.setProperty("id", 122112);
+    doc.setProperty("antani", "122112");
+
+    session.commit();
   }
 
   @Test(dependsOnMethods = "validationStrictClass")
   public void closeDb() {
-    database.close();
+    session.close();
   }
 
   @Test(dependsOnMethods = "closeDb")
-  public void createSchemaForMandatoryNullableTest() throws ParseException {
-    if (database.getMetadata().getSchema().existsClass("MyTestClass")) {
-      database.getMetadata().getSchema().dropClass("MyTestClass");
+  public void createSchemaForMandatoryNullableTest() {
+    if (session.getMetadata().getSchema().existsClass("MyTestClass")) {
+      session.getMetadata().getSchema().dropClass("MyTestClass");
     }
 
-    database.command("CREATE CLASS MyTestClass").close();
-    database.command("CREATE PROPERTY MyTestClass.keyField STRING").close();
-    database.command("ALTER PROPERTY MyTestClass.keyField MANDATORY true").close();
-    database.command("ALTER PROPERTY MyTestClass.keyField NOTNULL true").close();
-    database.command("CREATE PROPERTY MyTestClass.dateTimeField DATETIME").close();
-    database.command("ALTER PROPERTY MyTestClass.dateTimeField MANDATORY true").close();
-    database.command("ALTER PROPERTY MyTestClass.dateTimeField NOTNULL false").close();
-    database.command("CREATE PROPERTY MyTestClass.stringField STRING").close();
-    database.command("ALTER PROPERTY MyTestClass.stringField MANDATORY true").close();
-    database.command("ALTER PROPERTY MyTestClass.stringField NOTNULL false").close();
+    session.execute("CREATE CLASS MyTestClass").close();
+    session.execute("CREATE PROPERTY MyTestClass.keyField STRING").close();
+    session.execute("ALTER PROPERTY MyTestClass.keyField MANDATORY true").close();
+    session.execute("ALTER PROPERTY MyTestClass.keyField NOTNULL true").close();
+    session.execute("CREATE PROPERTY MyTestClass.dateTimeField DATETIME").close();
+    session.execute("ALTER PROPERTY MyTestClass.dateTimeField MANDATORY true").close();
+    session.execute("ALTER PROPERTY MyTestClass.dateTimeField NOTNULL false").close();
+    session.execute("CREATE PROPERTY MyTestClass.stringField STRING").close();
+    session.execute("ALTER PROPERTY MyTestClass.stringField MANDATORY true").close();
+    session.execute("ALTER PROPERTY MyTestClass.stringField NOTNULL false").close();
 
-    database.begin();
-    database
-        .command(
+    session.begin();
+    session
+        .execute(
             "INSERT INTO MyTestClass (keyField,dateTimeField,stringField) VALUES"
                 + " (\"K1\",null,null)")
         .close();
-    database.commit();
-    database.reload();
-    database.getMetadata().reload();
-    database.close();
-    database = acquireSession();
-    List<Result> result =
-        database.query("SELECT FROM MyTestClass WHERE keyField = ?", "K1").stream().toList();
+    session.commit();
+    session.reload();
+    session.getMetadata().reload();
+    session.close();
+    session = acquireSession();
+
+    session.begin();
+    var result =
+        session.query("SELECT FROM MyTestClass WHERE keyField = ?", "K1").stream().toList();
     Assert.assertEquals(result.size(), 1);
-    Result doc = result.get(0);
+    var doc = result.getFirst();
     Assert.assertTrue(doc.hasProperty("keyField"));
     Assert.assertTrue(doc.hasProperty("dateTimeField"));
     Assert.assertTrue(doc.hasProperty("stringField"));
+    session.commit();
   }
 
   @Test(dependsOnMethods = "createSchemaForMandatoryNullableTest")
   public void testUpdateDocDefined() {
-    List<Result> result =
-        database.query("SELECT FROM MyTestClass WHERE keyField = ?", "K1").stream().toList();
-    database.begin();
+    session.begin();
+    var result =
+        session.query("SELECT FROM MyTestClass WHERE keyField = ?", "K1").stream().toList();
     Assert.assertEquals(result.size(), 1);
-    Entity readDoc = result.get(0).toEntity();
+    var readDoc = result.getFirst().asEntityOrNull();
     assert readDoc != null;
     readDoc.setProperty("keyField", "K1N");
-    readDoc.save();
-    database.commit();
+    session.commit();
   }
 
   @Test(dependsOnMethods = "testUpdateDocDefined")
-  public void validationMandatoryNullableCloseDb() throws ParseException {
-    EntityImpl doc = new EntityImpl("MyTestClass");
-    doc.field("keyField", "K2");
-    doc.field("dateTimeField", (Date) null);
-    doc.field("stringField", (String) null);
-    database.begin();
-    doc.save();
-    database.commit();
+  public void validationMandatoryNullableCloseDb() {
+    session.begin();
+    var doc = ((EntityImpl) session.newEntity("MyTestClass"));
+    doc.setProperty("keyField", "K2");
+    doc.setProperty("dateTimeField", null);
+    doc.setProperty("stringField", null);
 
-    database.close();
-    database = acquireSession();
+    session.commit();
 
-    List<Result> result =
-        database.query("SELECT FROM MyTestClass WHERE keyField = ?", "K2").stream().toList();
-    database.begin();
+    session.close();
+    session = acquireSession();
+
+    session.begin();
+    var result =
+        session.query("SELECT FROM MyTestClass WHERE keyField = ?", "K2").stream().toList();
     Assert.assertEquals(result.size(), 1);
-    Entity readDoc = result.get(0).toEntity();
+    var readDoc = result.getFirst().asEntityOrNull();
     assert readDoc != null;
     readDoc.setProperty("keyField", "K2N");
-    readDoc.save();
-    database.commit();
+    session.commit();
   }
 
   @Test(dependsOnMethods = "validationMandatoryNullableCloseDb")
-  public void validationMandatoryNullableNoCloseDb() throws ParseException {
-    EntityImpl doc = new EntityImpl("MyTestClass");
-    doc.field("keyField", "K3");
-    doc.field("dateTimeField", (Date) null);
-    doc.field("stringField", (String) null);
+  public void validationMandatoryNullableNoCloseDb() {
+    session.begin();
+    var doc = ((EntityImpl) session.newEntity("MyTestClass"));
+    doc.setProperty("keyField", "K3");
+    doc.setProperty("dateTimeField", null);
+    doc.setProperty("stringField", null);
 
-    database.begin();
-    doc.save();
-    database.commit();
+    session.commit();
 
-    database.begin();
-    List<Result> result =
-        database.query("SELECT FROM MyTestClass WHERE keyField = ?", "K3").stream().toList();
+    session.begin();
+    var result =
+        session.query("SELECT FROM MyTestClass WHERE keyField = ?", "K3").stream().toList();
     Assert.assertEquals(result.size(), 1);
-    Entity readDoc = result.get(0).toEntity();
+    var readDoc = result.getFirst().asEntityOrNull();
     assert readDoc != null;
     readDoc.setProperty("keyField", "K3N");
-    readDoc.save();
-    database.commit();
+    session.commit();
   }
 
   @Test(dependsOnMethods = "validationDisabledAdDatabaseLevel")
-  public void dropSchemaForMandatoryNullableTest() throws ParseException {
-    database.command("DROP CLASS MyTestClass").close();
-    database.getMetadata().reload();
+  public void dropSchemaForMandatoryNullableTest() {
+    session.execute("DROP CLASS MyTestClass").close();
+    session.getMetadata().reload();
   }
 
   @Test
   public void testNullComparison() {
     // given
-    EntityImpl doc1 = new EntityImpl().field("testField", (Object) null);
-    EntityImpl doc2 = new EntityImpl().field("testField", (Object) null);
+    session.begin();
+    var doc1 = ((EntityImpl) session.newEntity()).setPropertyInChain("testField", null);
+    var doc2 = ((EntityImpl) session.newEntity()).setPropertyInChain("testField", null);
 
-    DocumentComparator comparator =
-        new DocumentComparator(
-            Collections.singletonList(new Pair<String, String>("testField", "asc")),
-            new BasicCommandContext());
+    var context = new BasicCommandContext();
+    context.setDatabaseSession(session);
+    var comparator =
+        new EntityComparator(
+            Collections.singletonList(new Pair<>("testField", "asc")),
+            context);
 
     Assert.assertEquals(comparator.compare(doc1, doc2), 0);
+    session.commit();
   }
 }
