@@ -15,9 +15,8 @@
  */
 package com.jetbrains.youtrack.db.auto;
 
-import com.jetbrains.youtrack.db.api.record.Identifiable;
 import com.jetbrains.youtrack.db.api.exception.CommandExecutionException;
-import com.jetbrains.youtrack.db.internal.core.record.impl.EntityImpl;
+import com.jetbrains.youtrack.db.api.record.Identifiable;
 import java.util.List;
 import org.testng.Assert;
 import org.testng.annotations.Optional;
@@ -35,18 +34,19 @@ public class SQLBatchTest extends BaseDBTest {
   @Test(enabled = false)
   public void createEdgeFailIfNoSourceOrTargetVertices() {
     try {
-      database.execute("sql",
-          "BEGIN;\n"
-              + "LET credential = INSERT INTO V SET email = '123', password = '123';\n"
-              + "LET order = SELECT FROM V WHERE cannotFindThisAttribute = true;\n"
-              + "LET edge = CREATE EDGE E FROM $credential TO $order set crazyName = 'yes';\n"
-              + "COMMIT;\n"
-              + "RETURN $credential;");
+      session.runScript("sql",
+          """
+              BEGIN;
+              LET credential = INSERT INTO V SET email = '123', password = '123';
+              LET order = SELECT FROM V WHERE cannotFindThisAttribute = true;
+              LET edge = CREATE EDGE E FROM $credential TO $order set crazyName = 'yes';
+              COMMIT;
+              RETURN $credential;""");
 
       Assert.fail("Tx has been committed while a rollback was expected");
     } catch (CommandExecutionException e) {
 
-      List<EntityImpl> result = executeQuery("select from V where email = '123'");
+      var result = executeQuery("select from V where email = '123'");
       Assert.assertTrue(result.isEmpty());
 
       result = executeQuery("select from E where crazyName = 'yes'");
@@ -56,13 +56,14 @@ public class SQLBatchTest extends BaseDBTest {
   }
 
   public void testInlineArray() {
-    String className1 = "SQLBatchTest_testInlineArray1";
-    String className2 = "SQLBatchTest_testInlineArray2";
-    database.command("CREATE CLASS " + className1 + " EXTENDS V").close();
-    database.command("CREATE CLASS " + className2 + " EXTENDS V").close();
-    database.command("CREATE PROPERTY " + className2 + ".foos LinkList " + className1).close();
+    var className1 = "SQLBatchTest_testInlineArray1";
+    var className2 = "SQLBatchTest_testInlineArray2";
+    session.execute("CREATE CLASS " + className1 + " EXTENDS V").close();
+    session.execute("CREATE CLASS " + className2 + " EXTENDS V").close();
+    session.execute("CREATE PROPERTY " + className2 + ".foos LinkList " + className1).close();
 
-    String script =
+    session.begin();
+    var script =
         "BEGIN;"
             + "LET a = CREATE VERTEX "
             + className1
@@ -78,25 +79,29 @@ public class SQLBatchTest extends BaseDBTest {
             + " SET foos=[$a,$b,$c];"
             + "COMMIT";
 
-    database.execute("sql", script);
+    session.runScript("sql", script);
+    session.commit();
 
-    List<EntityImpl> result = executeQuery("select from " + className2);
+    session.begin();
+    var result = executeQuery("select from " + className2);
     Assert.assertEquals(result.size(), 1);
-    List foos = result.get(0).field("foos");
+    List foos = result.getFirst().getProperty("foos");
     Assert.assertEquals(foos.size(), 3);
     Assert.assertTrue(foos.get(0) instanceof Identifiable);
     Assert.assertTrue(foos.get(1) instanceof Identifiable);
     Assert.assertTrue(foos.get(2) instanceof Identifiable);
+    session.commit();
   }
 
   public void testInlineArray2() {
-    String className1 = "SQLBatchTest_testInlineArray21";
-    String className2 = "SQLBatchTest_testInlineArray22";
-    database.command("CREATE CLASS " + className1 + " EXTENDS V").close();
-    database.command("CREATE CLASS " + className2 + " EXTENDS V").close();
-    database.command("CREATE PROPERTY " + className2 + ".foos LinkList " + className1).close();
+    var className1 = "SQLBatchTest_testInlineArray21";
+    var className2 = "SQLBatchTest_testInlineArray22";
+    session.execute("CREATE CLASS " + className1 + " EXTENDS V").close();
+    session.execute("CREATE CLASS " + className2 + " EXTENDS V").close();
+    session.execute("CREATE PROPERTY " + className2 + ".foos LinkList " + className1).close();
 
-    String script =
+    session.begin();
+    var script =
         "BEGIN;\n"
             + "LET a = CREATE VERTEX "
             + className1
@@ -113,14 +118,17 @@ public class SQLBatchTest extends BaseDBTest {
             + " SET foos= $foos;\n"
             + "COMMIT;";
 
-    database.execute("sql", script);
+    session.runScript("sql", script);
+    session.commit();
 
-    List<EntityImpl> result = executeQuery("select from " + className2);
+    session.begin();
+    var result = executeQuery("select from " + className2);
     Assert.assertEquals(result.size(), 1);
-    List foos = result.get(0).field("foos");
+    List foos = result.getFirst().getProperty("foos");
     Assert.assertEquals(foos.size(), 3);
     Assert.assertTrue(foos.get(0) instanceof Identifiable);
     Assert.assertTrue(foos.get(1) instanceof Identifiable);
     Assert.assertTrue(foos.get(2) instanceof Identifiable);
+    session.commit();
   }
 }
